CHANGES
=======

* Add Environment customization for kwargs, filters, tests, globals, and policies
* Refactor debug printing and fix urllib import
* Use debug in tests - currently breaks on 3.7+
* Add tox environments for 3.6, 3.7, 3.8, and 3.9
* Add requirements to requirements.txt and setup.py
* Add MIT license file
* README.rst: add debug option
* README.rst: fix formatting

1.1.0
-----

* update changelog
* Don't let header\_char modify the default config in-place
* Allow parallel builds

1.0.0
-----

* update changelog
* add github url in home page
* Allow not passing a context (i.e., empty dict)
* Support \`.. include::\` in template

0.3.0
-----

* Update jinja.py
* Update jinja.py
* Update jinja.py
* Extended jinja.py to make it more useful

0.2.1
-----

* fix readme

0.2.0
-----

* Allow jinja directive to use an external jinja template
* fix flake8
* add travisyml
* update readme
* remove changelog from git, as it is autogenerated
* update README
* fix issue with pip install -e 

0.1.1
-----

* Fix issue with overwritting content of rst file

0.1.0
-----

* initial commit