@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Use jinja_base for debug printing template files
 * Add Environment customization for kwargs, filters, tests, globals, and policies
 * Refactor debug printing and fix urllib import
 * Use debug in tests - currently breaks on 3.7+
